# dia_data

./: LICENSE  README.md
AuroraGT/: README.md  bsprite_format.txt  color_formats.txt
animation_player/: chunk.c  container.c  container.h  graphic.c  graphic.h  image_save.c  main.c  palette.c  palette.h  sprite.c  sprite.h  texture.c  texture.h
bsprite/: bsprite_v1.txt  bsprite_v2.txt  bsprite_v3.txt  url.txt
programs/: alpha_0656.c
programs/angkor_grass/: CMakeLists.txt  angkor_grass.c  compile.sh  gen_animation.sh  graphic.c  graphic.h
programs/animation_extractor/: chunk.h  graphic.c  graphic.h  main.c  palette.c  sprite.c  sprite.h  texture.c
programs/animation_player/: background_data.h  chunk.c  chunk.h  graphic.c  graphic.h  image_save.c  main.c  palette.h  texture.c
programs/common/: hw_impl.cmake  sprite.cmake  util.cmake
programs/common/hw/: engine_tex_impl.c  engine_tex_impl.h  file_impl.c  file_impl.h  graphic.c  graphic.h
programs/common/sprite/: palette.c  palette.h  sprite.c  sprite.h  texture.c  texture.h
programs/common/util/: chunk.c  chunk.h
programs/demo_compiler/: CMakeLists.txt  demo_compiler.c  demo_parser.c  demo_script.txt
programs/sprite_test/: sprite.c  texture.c  texture.h
programs/test/: char_mapping_table.c  file_packer.c  get_bs_flag_v3.c  get_bs_flag_v5.c  transp_0332.c
programs/test/demo_test/: demo_parser.c  (+1 more)
resources/snake/: frozen_snake_pos.txt  general_snake_pos.txt
resources/sounds/: readme.md
resources/splash/: copyright_pos.txt
resources/stage_images/: readme.md
stage_images/: readme.md
(+144 files in other folders)
